--- a/src/CrapCode/package.json
+++ b/src/CrapCode/package.json
@@ -7,7 +7,8 @@
         "winston":"0.6.2",
         "mongodb":"1.1.11",
         "feedparser":"0.10.7",
-        "cron":"1.0.1"
+        "cron":"1.0.1",
+        "rss":"0.0.4"
     },
     "bin":{
         "startCodeCrap":"./bin/start.sh"
